Update all dynamic result